[package]
name = "myjrny-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embedded-alloc = "0.6.0"
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32f746ng",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embedded-io-async = { version = "0.6.1" }
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
critical-section = "1.1.2"
stm32-fmc = "0.3.0"
embedded-graphics = "0.8"
embedded-layout = "0.4"
kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri", branch = "main" }

[profile.release]
debug = 2
lto = "fat"
