[package]
name = "myjrny-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
    "stm32f746ng",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.6.0", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-futures = "0.1.1"
ft5336 = "0.2.0"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
critical-section = "1.2.0"
stm32-fmc = "0.3.0"
embedded-graphics = "0.8"
embedded-layout = "0.4"
embedded-alloc = { version = "0.6.0", features = ["tlsf"] }
kolibri-embedded-gui = { git = "https://github.com/Yandrik/kolibri", branch = "main" }

[profile.release]
debug = 2
lto = "fat"
